--- a/index.html
+++ b/index.html
@@ -9,30 +9,110 @@
     <title>Movies Project</title>
   </head>
   <body>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="add-movie" data-bs-toggle="modal" data-bs-target="#add-movie">Add Movie</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <!-- injected code -->
     <div class="container-load">
       <h1 class="page-load"></h1>
     </div>
     <div class="container-movies"></div>
-    <div class="container-add">
-      <form action="">
-        <label for="title">Title</label>
-        <input type="text" id="title" />
-        <label for="rating">Rating</label>
-        <select name="rating" id="rating">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-        </select>
-        <label for="id">ID</label>
-        <input type="text" id="id" placeholder="please use a number" />
-        <input type="submit" id="submit-movie" value="Submit" />
-      </form>
+    <!-- delete movie modal -->
+    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalToggleLabel">Delete Movie</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">Are you sure you want to delete this movie?</div>
+          <div class="modal-footer">
+            <button class="btn btn-danger" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Delete</button>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalToggleLabel2">Delete Movie</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">Deleting this movie is irreversible. Are you sure you want to delete it?</div>
+          <div class="modal-footer">
+            <button class="btn btn-danger" id="delete" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal for edit movies -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Add a Movie!</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container-add">
+              <form action="">
+                <label for="title">Title</label>
+                <input type="text" id="title" placeholder="Enter a movie name" />
+
+                <label for="id">ID</label>
+                <input type="text" id="id" placeholder="Please enter a number" />
+                <label for="director">Director</label>
+                <input type="text" id="director" placeholder="Enter a directors name" />
+                <label for="rating">Rating</label>
+
+                <input type="text" id="genre" placeholder="Enter a directors name" />
+                <label for="genre">Rating</label>
+
+                <select name="rating" id="rating">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select>
+                <input type="submit" id="submit-movie" value="Submit" />
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- modal for movie info popout -->
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="./js/keys.js"></script>
+    <script src="./js/objects.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
