--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="add-movie" data-bs-toggle="modal" data-bs-target="#add-movie">Add Movie</a>
+              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#deleteMovieModal">Add Movie</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -37,37 +37,9 @@
       <h1 class="page-load"></h1>
     </div>
     <div class="container-movies"></div>
-    <!-- delete movie modal -->
-    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalToggleLabel">Delete Movie</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">Are you sure you want to delete this movie?</div>
-          <div class="modal-footer">
-            <button class="btn btn-danger" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Delete</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalToggleLabel2">Delete Movie</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">Deleting this movie is irreversible. Are you sure you want to delete it?</div>
-          <div class="modal-footer">
-            <button class="btn btn-danger" id="delete" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Delete</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Modal for edit movies -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+    <!-- Add Movie Modal -->
+    <div class="modal fade" id="deleteMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -82,13 +54,15 @@
 
                 <label for="id">ID</label>
                 <input type="text" id="id" placeholder="Please enter a number" />
+
                 <label for="director">Director</label>
-                <input type="text" id="director" placeholder="Enter a directors name" />
-                <label for="rating">Rating</label>
+                <input type="text" id="director" placeholder="Directors name" />
 
-                <input type="text" id="genre" placeholder="Enter a directors name" />
+                <label for="rating">Genre</label>
+                <input type="text" id="genre" placeholder="Enter Genre" />
+
                 <label for="genre">Rating</label>
-
+                <br />
                 <select name="rating" id="rating">
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -107,7 +81,27 @@
         </div>
       </div>
     </div>
-    <!-- modal for movie info popout -->
+
+    <!-- Delete Movie Modal -->
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Launch demo modal</button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="deleteMovie" aria-hidden="true" data-bs-toggle="modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
