--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="submit-button" type="submit"></button>
           </form>
         </div>
       </div>
@@ -76,7 +76,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-primary" id="modal-submit-movie">Save changes</button>
           </div>
         </div>
       </div>
