updated styling/html handled by js

--- a/index.html
+++ b/index.html
@@ -18,48 +18,7 @@
     <div class="container-movies"></div>
 
     <!-- Add Movie Modal -->
-    <div class="modal fade" id="deleteMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Add a Movie!</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <div class="container-add">
-              <form action="">
-                <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Enter a movie name" />
-
-                <label for="id">ID</label>
-                <input type="text" id="id" placeholder="Please enter a number" />
-
-                <label for="director">Director</label>
-                <input type="text" id="director" placeholder="Directors name" />
-
-                <label for="rating">Genre</label>
-                <input type="text" id="genre" placeholder="Enter Genre" />
-
-                <label for="genre">Rating</label>
-                <br />
-                <select name="rating" id="rating">
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                </select>
-                <input type="submit" id="submit-movie" value="Submit" />
-              </form>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="modal-submit-movie">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
