--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
       <h1 class="page-load"></h1>
     </div>
     <div class="container-movies"></div>
-
     <!-- Add Movie Modal -->
     <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
-
     <!-- footer -->
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top"></footer>
+    <footer class="hidden d-flex flex-wrap justify-content-between align-items-center py-3 border-top"></footer>
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
