condensed width 100% via css class

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <!-- nav bar injected -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark"></nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark width100"></nav>
     <!-- injected code -->
     <div class="container-load">
-      <h1 class="page-load"></h1>
+      <h1 class="page-load width100"></h1>
     </div>
     <div class="container-movies"></div>
     <!-- Add Movie Modal -->
