updated just-cont: center with bootstrap class

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- nav bar injected -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark width100"></nav>
     <!-- injected code -->
-    <div class="container-load d-flex">
-      <h1 class="page-load d-flex width100"></h1>
+    <div class="container-load d-flex justify-content-center">
+      <h1 class="page-load d-flex justify-content-center width100"></h1>
     </div>
-    <div class="container-movies d-flex"></div>
+    <div class="container-movies d-flex justify-content-center"></div>
     <!-- Add Movie Modal -->
     <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
     <!-- footer -->
