--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark width100"></nav>
     <!-- injected code -->
     <div class="container-load d-flex justify-content-center align-items-center">
-      <h1 class="page-load d-flex justify-content-center align-items-center width100"></h1>
+      <h1 class="page-load d-flex justify-content-center align-items-center"></h1>
     </div>
-    <div class="container-movies d-flex justify-content-center align-items-stretch"></div>
+    <div class="container-movies d-flex justify-content-center align-items-stretch flex-wrap"></div>
     <!-- Add Movie Modal -->
     <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
     <!-- footer -->
