updated to add a movie

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-load d-flex justify-content-center align-items-center">
       <h1 class="page-load d-flex justify-content-center align-items-center"></h1>
     </div>
-    <div class="container-movies d-flex justify-content-center align-items-stretch flex-wrap"></div>
+    <div class="container-movies d-flex justify-content-center align-items-stretch flex-wrap" id="container-movies"></div>
     <!-- Add Movie Modal -->
     <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
     <!-- footer -->
