added edit movie functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div class="container-movies d-flex justify-content-center align-items-stretch flex-wrap" id="container-movies"></div>
     <!-- Add Movie Modal -->
     <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
+    <!-- Edit Movie Modal -->
+    <div class="modal fade" id="editMovieModal" tabindex="-1" aria-labelledby="editMovie" aria-hidden="true"></div>
     <!-- Delete Movie Modal -->
     <div class="modal fade" id="deleteMovieModal" aria-hidden="true" aria-labelledby="deleteMovieModal" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
