--- a/index.html
+++ b/index.html
@@ -10,16 +10,130 @@
   </head>
   <body>
     <!-- nav bar injected -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark width100"></nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark width100">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="30px" width="30px" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 395 395" style="enable-background: new 0 0 395 395" xml:space="preserve" width="512" height="512">
+            <path style="fill: #f2f2f2" d="M290.693,117.499l-21.75,270h-44.61l2.72-89.8c14.73-9.64,24.45-26.28,24.45-45.2   c0-17.75-8.56-33.49-21.78-43.33l0.01-0.01l2.77-91.66H290.693z" />
+            <path style="fill: #f2f2f2" d="M167.953,297.709l2.71,89.79h-44.62l-21.74-270h58.2l2.77,91.65l0.01,0.01   c-13.22,9.84-21.79,25.59-21.79,43.34C143.493,271.419,153.223,288.069,167.953,297.709z" />
+            <path style="fill: #f7b239" d="M229.723,209.169c13.22,9.84,21.78,25.58,21.78,43.33c0,18.92-9.72,35.56-24.45,45.2   c-8.49,5.57-18.65,8.8-29.56,8.8c-10.9,0-21.06-3.23-29.54-8.79c-14.73-9.64-24.46-26.29-24.46-45.21   c0-17.75,8.57-33.5,21.79-43.34c8.99-6.7,20.14-10.66,32.21-10.66C209.563,198.499,220.723,202.469,229.723,209.169z" />
+            <path style="fill: #f7b239" d="M76.143,62.249c-1.2-2.93-1.86-6.14-1.86-9.5c0-13.82,11.2-25.03,25.03-25.03   c6.93,0,13.2,2.82,17.74,7.37c4.46-12.98,16.77-22.32,31.27-22.32c9.83,0,18.66,4.29,24.71,11.11c3.53-9.56,12.72-16.38,23.5-16.38   c11.4,0,21.01,7.63,24.04,18.05c6.05-7.77,15.49-12.78,26.1-12.78c14.5,0,26.82,9.34,31.28,22.32c4.53-4.55,10.8-7.37,17.74-7.37   c13.82,0,25.03,11.21,25.03,25.03c0,3.36-0.67,6.57-1.87,9.5c16.89,1.48,30.14,15.65,30.14,32.93c0,8.6-3.29,16.44-8.68,22.32   h-49.62h-58.19h-70h-58.2h-49.62c-5.38-5.88-8.67-13.72-8.67-22.32C46.013,77.899,59.253,63.729,76.143,62.249z" />
+            <path style="fill: #e09b2d" d="M148.139,62.249c-1.2-2.93-1.86-6.14-1.86-9.5c0-13.82,11.2-25.03,25.03-25.03    c6.93,0,13.2,2.82,17.74,7.37c3.675-10.696,12.687-18.906,23.856-21.469c-4.389-3.807-10.106-6.121-16.372-6.121    c-10.78,0-19.97,6.82-23.5,16.38c-6.05-6.82-14.88-11.11-24.71-11.11c-14.5,0-26.81,9.34-31.27,22.32    c-4.54-4.55-10.81-7.37-17.74-7.37c-13.83,0-25.03,11.21-25.03,25.03c0,3.36,0.66,6.57,1.86,9.5    c-16.89,1.48-30.13,15.65-30.13,32.93c0,8.6,3.29,16.44,8.67,22.32h49.62h22.376c-5.38-5.88-8.67-13.72-8.67-22.32    C118.009,77.899,131.249,63.729,148.139,62.249z" />
+            <path style="fill: #e09b2d" d="M245.029,23.879c1.535-4.157,4.142-7.793,7.482-10.579c-1.897-0.339-3.844-0.531-5.839-0.531    c-4.686,0-9.142,0.98-13.181,2.741C237.928,17.441,241.862,20.309,245.029,23.879z" />
+            <polygon style="fill: #e54728" points="104.303,117.499 126.043,387.499 87.763,387.499 54.363,117.499 54.683,117.499  " />
+            <path style="fill: #f95428" d="M227.053,297.699l-2.72,89.8h-53.67l-2.71-89.79c8.48,5.56,18.64,8.79,29.54,8.79   C208.403,306.499,218.563,303.269,227.053,297.699z" />
+            <path style="fill: #f95428" d="M232.503,117.499l-2.77,91.66l-0.01,0.01c-9-6.7-20.16-10.67-32.23-10.67   c-12.07,0-23.22,3.96-32.21,10.66l-0.01-0.01l-2.77-91.65H232.503z" />
+            <polygon style="fill: #f95428" points="340.633,117.499 307.233,387.499 268.943,387.499 290.693,117.499 340.313,117.499  " />
+            <path style="fill: #ffffff" d="M292.388,327.74c-0.308,0-0.618-0.019-0.931-0.057c-4.11-0.509-7.031-4.253-6.522-8.364   l18.729-151.403c0.509-4.111,4.26-7.031,8.364-6.523c4.11,0.509,7.031,4.253,6.522,8.364L299.821,321.16   C299.352,324.959,296.119,327.74,292.388,327.74z" />
+            <circle style="fill: #ffffff" cx="314.503" cy="140.269" r="7.5" />
+            <path
+              style="fill: #333333"
+              d="M356.49,95.18c0-18.224-11.766-33.624-28.478-38.749c0.138-1.217,0.207-2.445,0.207-3.681    c0-17.937-14.593-32.53-32.53-32.53c-5.284,0-10.372,1.249-14.931,3.609C273.405,12.444,260.658,5.27,246.67,5.27    c-8.806,0-17.161,2.793-24.042,7.88C216.597,5.083,206.967,0,196.53,0c-10.035,0-19.362,4.681-25.44,12.271    c-6.656-4.518-14.58-7.001-22.77-7.001c-13.984,0-26.729,7.176-34.081,18.562c-4.562-2.361-9.65-3.612-14.929-3.612    c-17.937,0-32.53,14.593-32.53,32.53c0,1.237,0.068,2.465,0.205,3.679C50.276,61.553,38.51,76.954,38.51,95.18    c0,9.117,3.049,17.877,8.628,24.997l33.177,268.244c0.465,3.758,3.657,6.579,7.443,6.579h219.476c3.786,0,6.979-2.822,7.443-6.579    l33.177-268.245C353.438,113.059,356.49,104.3,356.49,95.18z M72.174,70.552c3.962,5.668,11.057,11.641,21.488,11.641    c1.089,0,2.214-0.065,3.376-0.202c3.924-0.464,7.074-3.727,6.961-7.677c-0.13-4.527-4.117-7.831-8.49-7.249    c-8.415,1.125-11.775-6.039-12.373-7.52c-0.01-0.025-0.022-0.048-0.032-0.073c-0.009-0.021-0.013-0.044-0.022-0.065    c-0.601-1.466-0.995-2.997-1.18-4.571c-1.153-9.839,6.288-18.899,16.171-19.575c5.107-0.349,9.975,1.472,13.583,5.04    c1.403,1.388,3.278,2.26,5.251,2.289c3.334,0.049,6.199-2.046,7.236-5.064c3.547-10.322,13.263-17.257,24.177-17.257    c7.277,0,14.221,3.113,19.06,8.544c1.334,1.497,3.219,2.451,5.222,2.557c3.374,0.178,6.344-1.861,7.464-4.893    C182.6,19.613,189.217,15,196.53,15c7.675,0,14.541,5.1,16.774,12.431c0.651,2.136,2.074,4.002,4.106,4.928    c3.269,1.488,6.978,0.495,9.077-2.2c4.894-6.284,12.251-9.888,20.184-9.888c9.659,0,18.37,5.431,22.71,13.826    c-1.381,2.191-2.907,5.154-3.886,8.706c-2.827,10.262,0.264,20.561,8.702,29C275.661,73.268,277.581,74,279.5,74    c1.886,0,3.772-0.707,5.227-2.121c3.015-2.93,2.761-7.928-0.175-10.938c-4.338-4.447-5.877-8.944-4.704-13.74    c0.127-0.519,0.279-1.019,0.449-1.496c1.434-4.039,4.511-7.357,8.444-9.058c2.72-1.176,5.739-1.652,8.836-1.33    c8.824,0.917,15.655,8.584,15.643,17.455c-0.003,2.275-0.439,4.497-1.298,6.603c-0.673,1.65-0.76,3.516-0.201,5.208    c0.962,2.911,3.534,4.88,6.475,5.138c13.063,1.145,23.295,12.327,23.295,25.459c0,5.36-1.688,10.512-4.767,14.82H58.271    c-3.075-4.311-4.761-9.463-4.761-14.82C53.51,83.43,61.265,73.547,72.174,70.552z M197.497,299.003    c-25.642,0-46.503-20.861-46.503-46.503s20.861-46.503,46.503-46.503c25.642,0,46.503,20.861,46.503,46.503    S223.139,299.003,197.497,299.003z M197.497,190.997c-8.942,0-17.437,1.934-25.11,5.381L170.23,125h54.541l-2.158,71.38    C214.937,192.932,206.441,190.997,197.497,190.997z M155.223,125l2.439,80.696c-13.245,11.29-21.668,28.077-21.668,46.804    c0,20.064,9.66,37.912,24.571,49.146L162.93,380h-29.962l-20.535-255H155.223z M175.826,310.049    c6.745,2.548,14.045,3.954,21.671,3.954c7.628,0,14.93-1.406,21.676-3.956L217.054,380h-39.117L175.826,310.049z M234.433,301.642    C249.342,290.408,259,272.562,259,252.5c0-18.724-8.421-35.509-21.662-46.799L239.776,125h42.784l-20.535,255H232.06    L234.433,301.642z M62.849,125h34.535l20.535,255H94.388L62.849,125z M300.604,380h-23.531l20.535-255h34.536L300.604,380z" />
+            <path style="fill: #333333" d="M167.164,100.524c4.142,0,7.5-3.358,7.5-7.5s-3.358-7.5-7.5-7.5c-6.893,0-12.5-5.607-12.5-12.5    s5.607-12.5,12.5-12.5c4.454,0,8.476,2.307,10.758,6.171c1.19,2.015,3.253,3.359,5.577,3.634c2.326,0.276,4.644-0.551,6.271-2.232    c3.122-3.226,7.308-5.002,11.786-5.002c9.046,0,16.405,7.359,16.405,16.406c0,4.142,3.357,7.5,7.5,7.5s7.5-3.358,7.5-7.5    c0-17.317-14.088-31.406-31.405-31.406c-5.774,0-11.293,1.54-16.105,4.429c-4.978-4.432-11.484-7-18.286-7    c-15.164,0-27.5,12.336-27.5,27.5S152,100.524,167.164,100.524z" />
+          </svg>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-bs-toggle="modal" data-bs-target="#addMovieModal">Add Movie</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" id="form-control" type="search" placeholder="Search" aria-label="Search" />
+            <button class="submit-button" type="submit">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
     <!-- injected code -->
     <div class="container-load d-flex justify-content-center align-items-center">
       <h1 class="page-load d-flex justify-content-center align-items-center"></h1>
     </div>
     <div class="container-movies d-flex justify-content-center align-items-stretch flex-wrap" id="container-movies"></div>
     <!-- Add Movie Modal -->
-    <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true"></div>
+    <div class="modal fade" id="addMovieModal" tabindex="-1" aria-labelledby="addMovie" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Add a Movie!</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container-add d-flex flex-column justify-content-start width100">
+              <form action="">
+                <label for="title">Title</label>
+                <input class="width100" type="text" id="title" placeholder="Enter a movie name" />
+
+                <label for="id">ID</label>
+                <input class="width100" type="text" id="id" placeholder="Please enter a number" />
+
+                <label for="director">Director</label>
+                <input class="width100" type="text" id="director" placeholder="Directors name" />
+
+                <label for="genre">Genre</label>
+                <input class="width100" type="text" id="genre" placeholder="Enter Genre" />
+
+                <br />
+                <label for="rating">Rating</label>
+                <input class="width100" type="text" id="rating" placeholder="Enter Rating 1-5" />
+                <input type="submit" id="submit-movie" value="Submit" />
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="modal-submit-movie">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Edit Movie Modal -->
-    <div class="modal fade" id="editMovieModal" tabindex="-1" aria-labelledby="editMovie" aria-hidden="true"></div>
+    <div class="modal fade" id="editMovieModal" tabindex="-1" aria-labelledby="editMovie" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addMovieModal">Edit a Movie!</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container-add d-flex flex-column justify-content-start width100">
+              <form action="">
+                <label for="title">Title</label>
+                <input class="width100" type="text" id="edit-title" placeholder="Enter a movie name" />
+
+                <label for="id">ID</label>
+                <input class="width100" type="text" id="edit-id" placeholder="Please enter a number" />
+
+                <label for="director">Director</label>
+                <input class="width100" type="text" id="edit-director" placeholder="Directors name" />
+
+                <label for="genre">Genre</label>
+                <input class="width100" type="text" id="genre" placeholder="Enter Genre" />
+
+                <br />
+                <label for="rating">Rating</label>
+                <input class="width100" type="text" id="rating" placeholder="Enter Rating 1-5" />
+                <input type="submit" id="submit-movie" value="Submit" />
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="edit-submit-movie">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Delete Movie Modal -->
     <div class="modal fade" id="deleteMovieModal" aria-hidden="true" aria-labelledby="deleteMovieModal" tabindex="-1">
       <div class="modal-dialog modal-dialog-centered">
@@ -49,9 +163,37 @@
         </div>
       </div>
     </div>
-    <a class="btn btn-primary" data-bs-toggle="modal" href="#deleteMovieModal" role="button" id="deleteModalOpen">Delete modal button</a>
+    <!-- <a class="btn btn-primary" data-bs-toggle="modal" href="#deleteMovieModal" role="button" id="deleteModalOpen">Delete modal button</a> -->
     <!-- footer -->
-    <footer class="hidden d-flex flex-wrap justify-content-between align-items-center py-3 border-top"></footer>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="text-muted">2022 Movie App</span>
+      </div>
+      <ul class="nav justify-content-end list-unstyled d-flex me-5">
+        <li class="ms-3">
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+              <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z" /></svg
+          ></a>
+        </li>
+        <li class="ms-3">
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+              <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" /></svg
+          ></a>
+        </li>
+        <li class="ms-3">
+          <a href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+              <path
+                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" /></svg
+          ></a>
+        </li>
+      </ul>
+    </footer>
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
