--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark width100">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="30px" width="30px" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 395 395" style="enable-background: new 0 0 395 395" xml:space="preserve" width="512" height="512">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="30px" width="30px" id="Layer_1" x="0px" y="0px" viewBox="0 0 395 395"  xml:space="preserve">
             <path style="fill: #f2f2f2" d="M290.693,117.499l-21.75,270h-44.61l2.72-89.8c14.73-9.64,24.45-26.28,24.45-45.2   c0-17.75-8.56-33.49-21.78-43.33l0.01-0.01l2.77-91.66H290.693z" />
             <path style="fill: #f2f2f2" d="M167.953,297.709l2.71,89.79h-44.62l-21.74-270h58.2l2.77,91.65l0.01,0.01   c-13.22,9.84-21.79,25.59-21.79,43.34C143.493,271.419,153.223,288.069,167.953,297.709z" />
             <path style="fill: #f7b239" d="M229.723,209.169c13.22,9.84,21.78,25.58,21.78,43.33c0,18.92-9.72,35.56-24.45,45.2   c-8.49,5.57-18.65,8.8-29.56,8.8c-10.9,0-21.06-3.23-29.54-8.79c-14.73-9.64-24.46-26.29-24.46-45.21   c0-17.75,8.57-33.5,21.79-43.34c8.99-6.7,20.14-10.66,32.21-10.66C209.563,198.499,220.723,202.469,229.723,209.169z" />
@@ -80,8 +80,8 @@
                 <label for="director">Director</label>
                 <input class="width100" type="text" id="director" placeholder="Directors name" />
 
-                <label for="genre">Genre</label>
-                <input class="width100" type="text" id="genre" placeholder="Enter Genre" />
+                <label for="addGenre">Genre</label>
+                <input class="width100" type="text" id="addGenre" placeholder="Enter Genre" />
 
                 <br />
                 <label for="rating">Rating</label>
@@ -102,28 +102,28 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="addMovieModal">Edit a Movie!</h5>
+            <h5 class="modal-title">Edit a Movie!</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <div class="container-add d-flex flex-column justify-content-start width100">
               <form action="">
-                <label for="title">Title</label>
+                <label for="edit-title">Title</label>
                 <input class="width100" type="text" id="edit-title" placeholder="Enter a movie name" />
 
-                <label for="id">ID</label>
+                <label for="edit-id">ID</label>
                 <input class="width100" type="text" id="edit-id" placeholder="Please enter a number" />
 
-                <label for="director">Director</label>
+                <label for="edit-director">Director</label>
                 <input class="width100" type="text" id="edit-director" placeholder="Directors name" />
 
                 <label for="genre">Genre</label>
                 <input class="width100" type="text" id="genre" placeholder="Enter Genre" />
 
                 <br />
-                <label for="rating">Rating</label>
-                <input class="width100" type="text" id="rating" placeholder="Enter Rating 1-5" />
-                <input type="submit" id="submit-movie" value="Submit" />
+                <label for="edit-rating">Rating</label>
+                <input class="width100" type="text" id="edit-rating" placeholder="Enter Rating 1-5" />
+                <input type="submit" id="submit-edit" value="Submit" />
               </form>
             </div>
           </div>
