--- a/index.html
+++ b/index.html
@@ -117,19 +117,15 @@
                 <label for="edit-director">Director</label>
                 <input class="width100" type="text" id="edit-director" placeholder="Directors name" />
 
-                <label for="genre">Genre</label>
-                <input class="width100" type="text" id="genre" placeholder="Enter Genre" />
+                <label for="edit-genre">Genre</label>
+                <input class="width100" type="text" id="edit-genre" placeholder="Enter Genre" />
 
                 <br />
                 <label for="edit-rating">Rating</label>
-                <input class="width100" type="text" id="edit-rating" placeholder="Enter Rating 1-5" />
+                <input type="text" id="edit-rating" placeholder="Enter Rating 1-5" />
                 <input type="submit" id="submit-edit" value="Submit" />
               </form>
             </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" id="edit-submit-movie">Save changes</button>
           </div>
         </div>
       </div>
@@ -158,12 +154,12 @@
           </div>
           <div class="modal-body">Are you sure you want to delete this movie? This is irreversible.</div>
           <div class="modal-footer">
-            <button class="btn btn-danger" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Delete</button>
+            <button class="btn btn-danger" data-bs-toggle="modal">Delete</button>
           </div>
         </div>
       </div>
     </div>
-    <!-- <a class="btn btn-primary" data-bs-toggle="modal" href="#deleteMovieModal" role="button" id="deleteModalOpen">Delete modal button</a> -->
+    <a class="btn btn-primary" data-bs-toggle="modal" href="#deleteMovieModal" role="button" id="deleteModalOpen">Delete modal button</a>
     <!-- footer -->
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
       <div class="col-md-4 d-flex align-items-center">
